devoirs/02/parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from parser.y
-----------------------------------------------------------------------------

state 30 contains 13 shift/reduce conflicts.
state 50 contains 13 shift/reduce conflicts.
state 60 contains 1 shift/reduce conflicts.
state 65 contains 13 shift/reduce conflicts.
state 66 contains 1 shift/reduce conflicts.
state 91 contains 13 shift/reduce conflicts.
state 93 contains 1 reduce/reduce conflicts.
state 94 contains 1 reduce/reduce conflicts.
state 100 contains 13 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Statement                         (0)
	Statement -> Definition                            (1)
	Statement -> Expr                                  (2)
	Expr -> 'put that' LetInDefs 'into' Expr           (3)
	Expr -> 'put that' 'into' Expr                     (4)
	Expr -> 'what is' Expr '?' CaseOfs                 (5)
	Expr -> UnaryOp Expr                               (6)
	Expr -> Expr BinaryOp Expr                         (7)
	Expr -> Literal                                    (8)
	Expr -> 'identifier'                               (9)
	Expr -> FunctionApp                                (10)
	Expr -> If                                         (11)
	Definition -> FunctionDef                          (12)
	Definition -> 'this' 'identifier' 'is' Expr        (13)
	FunctionDef -> 'behold' 'identifier' FArgs 'which does' Expr   (14)
	FArgs ->                                           (15)
	FArgs -> 'with' Args                               (16)
	Args -> Arg                                        (17)
	Args -> Args 'and' Arg                             (18)
	Arg -> Type 'identifier'                           (19)
	Arg -> TypeTuple                                   (20)
	Type -> 'Integer'                                  (21)
	Type -> 'Boolean'                                  (22)
	Type -> TypeTuple                                  (23)
	TypeTuple -> '(' Type 'and his friend' Type ')'    (24)
	FunctionApp -> 'summon' 'identifier' 'with' FunctionAppArgs   (25)
	FunctionApp -> 'summon' 'identifier'               (26)
	FunctionAppArgs -> FunctionAppArg                  (27)
	FunctionAppArgs -> FunctionAppArgs 'and' FunctionAppArg   (28)
	FunctionAppArg -> Expr                             (29)
	LetInDefs -> Definition                            (30)
	LetInDefs -> LetInDefs 'and' Definition            (31)
	If -> 'suppose' Expr 'then we can conclude' Expr 'rather than' Expr   (32)
	CaseOfs -> CaseOf                                  (33)
	CaseOfs -> CaseOf CaseOfs                          (34)
	CaseOf -> 'perhaps' Pattern 'which does' Expr      (35)
	Pattern -> 'who cares'                             (36)
	Pattern -> 'identifier'                            (37)
	Pattern -> Literal                                 (38)
	Pattern -> '(' Pattern 'and his friend' Pattern ')'   (39)
	Literal -> 'integer'                               (40)
	Literal -> 'yep'                                   (41)
	Literal -> 'pasyep'                                (42)
	Literal -> '(' Expr 'and his friend' Expr ')'      (43)
	UnaryOp -> 'neg'                                   (44)
	UnaryOp -> 'not'                                   (45)
	BinaryOp -> 'plus'                                 (46)
	BinaryOp -> 'minus'                                (47)
	BinaryOp -> 'times'                                (48)
	BinaryOp -> 'split'                                (49)
	BinaryOp -> 'rest'                                 (50)
	BinaryOp -> 'weaker than'                          (51)
	BinaryOp -> 'stronger than'                        (52)
	BinaryOp -> 'as weak as'                           (53)
	BinaryOp -> 'as strong as'                         (54)
	BinaryOp -> 'same as'                              (55)
	BinaryOp -> 'different of'                         (56)
	BinaryOp -> 'both'                                 (57)
	BinaryOp -> 'either'                               (58)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'behold'       { TokenPosn Behold _ }
	'summon'       { TokenPosn Summon _ }
	'with'         { TokenPosn With _ }
	'and'          { TokenPosn AndParam _ }
	'this'         { TokenPosn This _ }
	'is'           { TokenPosn Is _ }
	'('            { TokenPosn LParen _ }
	')'            { TokenPosn RParen _ }
	'and his friend'{ TokenPosn AndHisFriend _ }
	'put that'     { TokenPosn PutThat _ }
	'into'         { TokenPosn Into _ }
	'what is'      { TokenPosn WhatIs _ }
	'?'            { TokenPosn QuestionMark _ }
	'perhaps'      { TokenPosn Perhaps _ }
	'who cares'    { TokenPosn WhoCares _ }
	'which does'   { TokenPosn WhichDoes _ }
	'neg'          { TokenPosn Neg _ }
	'not'          { TokenPosn Not _ }
	'plus'         { TokenPosn Plus _ }
	'minus'        { TokenPosn Minus _ }
	'times'        { TokenPosn Mult _ }
	'split'        { TokenPosn Div _ }
	'rest'         { TokenPosn Mod _ }
	'weaker than'  { TokenPosn Lesser _ }
	'stronger than'{ TokenPosn Greater _ }
	'as weak as'   { TokenPosn LesserEq _ }
	'as strong as' { TokenPosn GreaterEq _ }
	'same as'      { TokenPosn Eq _ }
	'different of' { TokenPosn Neq _ }
	'both'         { TokenPosn And _ }
	'either'       { TokenPosn Or _ }
	'yep'          { TokenPosn Truthy _ }
	'pasyep'       { TokenPosn Falsy _ }
	'identifier'   { TokenPosn (Name $$) _ }
	'integer'      { TokenPosn (Integer $$) _ }
	'Integer'      { TokenPosn (Type "Integer") _ }
	'Boolean'      { TokenPosn (Type "Boolean") _ }
	'suppose'      { TokenPosn Suppose _ }
	'then we can conclude'{ TokenPosn ThenWeCanConclude _ }
	'rather than'  { TokenPosn RatherThan _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Statement       rules 1, 2
	Expr            rules 3, 4, 5, 6, 7, 8, 9, 10, 11
	Definition      rules 12, 13
	FunctionDef     rule  14
	FArgs           rules 15, 16
	Args            rules 17, 18
	Arg             rules 19, 20
	Type            rules 21, 22, 23
	TypeTuple       rule  24
	FunctionApp     rules 25, 26
	FunctionAppArgs rules 27, 28
	FunctionAppArg  rule  29
	LetInDefs       rules 30, 31
	If              rule  32
	CaseOfs         rules 33, 34
	CaseOf          rule  35
	Pattern         rules 36, 37, 38, 39
	Literal         rules 40, 41, 42, 43
	UnaryOp         rules 44, 45
	BinaryOp        rules 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . Statement                        (rule 0)

	'behold'       shift, and enter state 4
	'summon'       shift, and enter state 12
	'this'         shift, and enter state 5
	'('            shift, and enter state 13
	'put that'     shift, and enter state 14
	'what is'      shift, and enter state 15
	'neg'          shift, and enter state 16
	'not'          shift, and enter state 17
	'yep'          shift, and enter state 18
	'pasyep'       shift, and enter state 19
	'identifier'   shift, and enter state 20
	'integer'      shift, and enter state 21
	'suppose'      shift, and enter state 22

	Statement      goto state 6
	Expr           goto state 7
	Definition     goto state 2
	FunctionDef    goto state 3
	FunctionApp    goto state 8
	If             goto state 9
	Literal        goto state 10
	UnaryOp        goto state 11

State 1

	Statement -> . Definition                           (rule 1)

	'behold'       shift, and enter state 4
	'this'         shift, and enter state 5

	Definition     goto state 2
	FunctionDef    goto state 3

State 2

	Statement -> Definition .                           (rule 1)

	%eof           reduce using rule 1


State 3

	Definition -> FunctionDef .                         (rule 12)

	'and'          reduce using rule 12
	'into'         reduce using rule 12
	%eof           reduce using rule 12


State 4

	FunctionDef -> 'behold' . 'identifier' FArgs 'which does' Expr    (rule 14)

	'identifier'   shift, and enter state 46


State 5

	Definition -> 'this' . 'identifier' 'is' Expr       (rule 13)

	'identifier'   shift, and enter state 45


State 6

	%start_parser -> Statement .                        (rule 0)

	%eof           accept


State 7

	Statement -> Expr .                                 (rule 2)
	Expr -> Expr . BinaryOp Expr                        (rule 7)

	'plus'         shift, and enter state 32
	'minus'        shift, and enter state 33
	'times'        shift, and enter state 34
	'split'        shift, and enter state 35
	'rest'         shift, and enter state 36
	'weaker than'  shift, and enter state 37
	'stronger than'shift, and enter state 38
	'as weak as'   shift, and enter state 39
	'as strong as' shift, and enter state 40
	'same as'      shift, and enter state 41
	'different of' shift, and enter state 42
	'both'         shift, and enter state 43
	'either'       shift, and enter state 44
	%eof           reduce using rule 2

	BinaryOp       goto state 31

State 8

	Expr -> FunctionApp .                               (rule 10)

	'and'          reduce using rule 10
	')'            reduce using rule 10
	'and his friend'reduce using rule 10
	'into'         reduce using rule 10
	'?'            reduce using rule 10
	'perhaps'      reduce using rule 10
	'plus'         reduce using rule 10
	'minus'        reduce using rule 10
	'times'        reduce using rule 10
	'split'        reduce using rule 10
	'rest'         reduce using rule 10
	'weaker than'  reduce using rule 10
	'stronger than'reduce using rule 10
	'as weak as'   reduce using rule 10
	'as strong as' reduce using rule 10
	'same as'      reduce using rule 10
	'different of' reduce using rule 10
	'both'         reduce using rule 10
	'either'       reduce using rule 10
	'then we can conclude'reduce using rule 10
	'rather than'  reduce using rule 10
	%eof           reduce using rule 10


State 9

	Expr -> If .                                        (rule 11)

	'and'          reduce using rule 11
	')'            reduce using rule 11
	'and his friend'reduce using rule 11
	'into'         reduce using rule 11
	'?'            reduce using rule 11
	'perhaps'      reduce using rule 11
	'plus'         reduce using rule 11
	'minus'        reduce using rule 11
	'times'        reduce using rule 11
	'split'        reduce using rule 11
	'rest'         reduce using rule 11
	'weaker than'  reduce using rule 11
	'stronger than'reduce using rule 11
	'as weak as'   reduce using rule 11
	'as strong as' reduce using rule 11
	'same as'      reduce using rule 11
	'different of' reduce using rule 11
	'both'         reduce using rule 11
	'either'       reduce using rule 11
	'then we can conclude'reduce using rule 11
	'rather than'  reduce using rule 11
	%eof           reduce using rule 11


State 10

	Expr -> Literal .                                   (rule 8)

	'and'          reduce using rule 8
	')'            reduce using rule 8
	'and his friend'reduce using rule 8
	'into'         reduce using rule 8
	'?'            reduce using rule 8
	'perhaps'      reduce using rule 8
	'plus'         reduce using rule 8
	'minus'        reduce using rule 8
	'times'        reduce using rule 8
	'split'        reduce using rule 8
	'rest'         reduce using rule 8
	'weaker than'  reduce using rule 8
	'stronger than'reduce using rule 8
	'as weak as'   reduce using rule 8
	'as strong as' reduce using rule 8
	'same as'      reduce using rule 8
	'different of' reduce using rule 8
	'both'         reduce using rule 8
	'either'       reduce using rule 8
	'then we can conclude'reduce using rule 8
	'rather than'  reduce using rule 8
	%eof           reduce using rule 8


State 11

	Expr -> UnaryOp . Expr                              (rule 6)

	'summon'       shift, and enter state 12
	'('            shift, and enter state 13
	'put that'     shift, and enter state 14
	'what is'      shift, and enter state 15
	'neg'          shift, and enter state 16
	'not'          shift, and enter state 17
	'yep'          shift, and enter state 18
	'pasyep'       shift, and enter state 19
	'identifier'   shift, and enter state 20
	'integer'      shift, and enter state 21
	'suppose'      shift, and enter state 22

	Expr           goto state 30
	FunctionApp    goto state 8
	If             goto state 9
	Literal        goto state 10
	UnaryOp        goto state 11

State 12

	FunctionApp -> 'summon' . 'identifier' 'with' FunctionAppArgs    (rule 25)
	FunctionApp -> 'summon' . 'identifier'              (rule 26)

	'identifier'   shift, and enter state 29


State 13

	Literal -> '(' . Expr 'and his friend' Expr ')'     (rule 43)

	'summon'       shift, and enter state 12
	'('            shift, and enter state 13
	'put that'     shift, and enter state 14
	'what is'      shift, and enter state 15
	'neg'          shift, and enter state 16
	'not'          shift, and enter state 17
	'yep'          shift, and enter state 18
	'pasyep'       shift, and enter state 19
	'identifier'   shift, and enter state 20
	'integer'      shift, and enter state 21
	'suppose'      shift, and enter state 22

	Expr           goto state 28
	FunctionApp    goto state 8
	If             goto state 9
	Literal        goto state 10
	UnaryOp        goto state 11

State 14

	Expr -> 'put that' . LetInDefs 'into' Expr          (rule 3)
	Expr -> 'put that' . 'into' Expr                    (rule 4)

	'behold'       shift, and enter state 4
	'this'         shift, and enter state 5
	'into'         shift, and enter state 27

	Definition     goto state 25
	FunctionDef    goto state 3
	LetInDefs      goto state 26

State 15

	Expr -> 'what is' . Expr '?' CaseOfs                (rule 5)

	'summon'       shift, and enter state 12
	'('            shift, and enter state 13
	'put that'     shift, and enter state 14
	'what is'      shift, and enter state 15
	'neg'          shift, and enter state 16
	'not'          shift, and enter state 17
	'yep'          shift, and enter state 18
	'pasyep'       shift, and enter state 19
	'identifier'   shift, and enter state 20
	'integer'      shift, and enter state 21
	'suppose'      shift, and enter state 22

	Expr           goto state 24
	FunctionApp    goto state 8
	If             goto state 9
	Literal        goto state 10
	UnaryOp        goto state 11

State 16

	UnaryOp -> 'neg' .                                  (rule 44)

	'summon'       reduce using rule 44
	'('            reduce using rule 44
	'put that'     reduce using rule 44
	'what is'      reduce using rule 44
	'neg'          reduce using rule 44
	'not'          reduce using rule 44
	'yep'          reduce using rule 44
	'pasyep'       reduce using rule 44
	'identifier'   reduce using rule 44
	'integer'      reduce using rule 44
	'suppose'      reduce using rule 44


State 17

	UnaryOp -> 'not' .                                  (rule 45)

	'summon'       reduce using rule 45
	'('            reduce using rule 45
	'put that'     reduce using rule 45
	'what is'      reduce using rule 45
	'neg'          reduce using rule 45
	'not'          reduce using rule 45
	'yep'          reduce using rule 45
	'pasyep'       reduce using rule 45
	'identifier'   reduce using rule 45
	'integer'      reduce using rule 45
	'suppose'      reduce using rule 45


State 18

	Literal -> 'yep' .                                  (rule 41)

	'and'          reduce using rule 41
	')'            reduce using rule 41
	'and his friend'reduce using rule 41
	'into'         reduce using rule 41
	'?'            reduce using rule 41
	'perhaps'      reduce using rule 41
	'which does'   reduce using rule 41
	'plus'         reduce using rule 41
	'minus'        reduce using rule 41
	'times'        reduce using rule 41
	'split'        reduce using rule 41
	'rest'         reduce using rule 41
	'weaker than'  reduce using rule 41
	'stronger than'reduce using rule 41
	'as weak as'   reduce using rule 41
	'as strong as' reduce using rule 41
	'same as'      reduce using rule 41
	'different of' reduce using rule 41
	'both'         reduce using rule 41
	'either'       reduce using rule 41
	'then we can conclude'reduce using rule 41
	'rather than'  reduce using rule 41
	%eof           reduce using rule 41


State 19

	Literal -> 'pasyep' .                               (rule 42)

	'and'          reduce using rule 42
	')'            reduce using rule 42
	'and his friend'reduce using rule 42
	'into'         reduce using rule 42
	'?'            reduce using rule 42
	'perhaps'      reduce using rule 42
	'which does'   reduce using rule 42
	'plus'         reduce using rule 42
	'minus'        reduce using rule 42
	'times'        reduce using rule 42
	'split'        reduce using rule 42
	'rest'         reduce using rule 42
	'weaker than'  reduce using rule 42
	'stronger than'reduce using rule 42
	'as weak as'   reduce using rule 42
	'as strong as' reduce using rule 42
	'same as'      reduce using rule 42
	'different of' reduce using rule 42
	'both'         reduce using rule 42
	'either'       reduce using rule 42
	'then we can conclude'reduce using rule 42
	'rather than'  reduce using rule 42
	%eof           reduce using rule 42


State 20

	Expr -> 'identifier' .                              (rule 9)

	'and'          reduce using rule 9
	')'            reduce using rule 9
	'and his friend'reduce using rule 9
	'into'         reduce using rule 9
	'?'            reduce using rule 9
	'perhaps'      reduce using rule 9
	'plus'         reduce using rule 9
	'minus'        reduce using rule 9
	'times'        reduce using rule 9
	'split'        reduce using rule 9
	'rest'         reduce using rule 9
	'weaker than'  reduce using rule 9
	'stronger than'reduce using rule 9
	'as weak as'   reduce using rule 9
	'as strong as' reduce using rule 9
	'same as'      reduce using rule 9
	'different of' reduce using rule 9
	'both'         reduce using rule 9
	'either'       reduce using rule 9
	'then we can conclude'reduce using rule 9
	'rather than'  reduce using rule 9
	%eof           reduce using rule 9


State 21

	Literal -> 'integer' .                              (rule 40)

	'and'          reduce using rule 40
	')'            reduce using rule 40
	'and his friend'reduce using rule 40
	'into'         reduce using rule 40
	'?'            reduce using rule 40
	'perhaps'      reduce using rule 40
	'which does'   reduce using rule 40
	'plus'         reduce using rule 40
	'minus'        reduce using rule 40
	'times'        reduce using rule 40
	'split'        reduce using rule 40
	'rest'         reduce using rule 40
	'weaker than'  reduce using rule 40
	'stronger than'reduce using rule 40
	'as weak as'   reduce using rule 40
	'as strong as' reduce using rule 40
	'same as'      reduce using rule 40
	'different of' reduce using rule 40
	'both'         reduce using rule 40
	'either'       reduce using rule 40
	'then we can conclude'reduce using rule 40
	'rather than'  reduce using rule 40
	%eof           reduce using rule 40


State 22

	If -> 'suppose' . Expr 'then we can conclude' Expr 'rather than' Expr    (rule 32)

	'summon'       shift, and enter state 12
	'('            shift, and enter state 13
	'put that'     shift, and enter state 14
	'what is'      shift, and enter state 15
	'neg'          shift, and enter state 16
	'not'          shift, and enter state 17
	'yep'          shift, and enter state 18
	'pasyep'       shift, and enter state 19
	'identifier'   shift, and enter state 20
	'integer'      shift, and enter state 21
	'suppose'      shift, and enter state 22

	Expr           goto state 23
	FunctionApp    goto state 8
	If             goto state 9
	Literal        goto state 10
	UnaryOp        goto state 11

State 23

	Expr -> Expr . BinaryOp Expr                        (rule 7)
	If -> 'suppose' Expr . 'then we can conclude' Expr 'rather than' Expr    (rule 32)

	'plus'         shift, and enter state 32
	'minus'        shift, and enter state 33
	'times'        shift, and enter state 34
	'split'        shift, and enter state 35
	'rest'         shift, and enter state 36
	'weaker than'  shift, and enter state 37
	'stronger than'shift, and enter state 38
	'as weak as'   shift, and enter state 39
	'as strong as' shift, and enter state 40
	'same as'      shift, and enter state 41
	'different of' shift, and enter state 42
	'both'         shift, and enter state 43
	'either'       shift, and enter state 44
	'then we can conclude'shift, and enter state 57

	BinaryOp       goto state 31

State 24

	Expr -> 'what is' Expr . '?' CaseOfs                (rule 5)
	Expr -> Expr . BinaryOp Expr                        (rule 7)

	'?'            shift, and enter state 56
	'plus'         shift, and enter state 32
	'minus'        shift, and enter state 33
	'times'        shift, and enter state 34
	'split'        shift, and enter state 35
	'rest'         shift, and enter state 36
	'weaker than'  shift, and enter state 37
	'stronger than'shift, and enter state 38
	'as weak as'   shift, and enter state 39
	'as strong as' shift, and enter state 40
	'same as'      shift, and enter state 41
	'different of' shift, and enter state 42
	'both'         shift, and enter state 43
	'either'       shift, and enter state 44

	BinaryOp       goto state 31

State 25

	LetInDefs -> Definition .                           (rule 30)

	'and'          reduce using rule 30
	'into'         reduce using rule 30


State 26

	Expr -> 'put that' LetInDefs . 'into' Expr          (rule 3)
	LetInDefs -> LetInDefs . 'and' Definition           (rule 31)

	'and'          shift, and enter state 54
	'into'         shift, and enter state 55


State 27

	Expr -> 'put that' 'into' . Expr                    (rule 4)

	'summon'       shift, and enter state 12
	'('            shift, and enter state 13
	'put that'     shift, and enter state 14
	'what is'      shift, and enter state 15
	'neg'          shift, and enter state 16
	'not'          shift, and enter state 17
	'yep'          shift, and enter state 18
	'pasyep'       shift, and enter state 19
	'identifier'   shift, and enter state 20
	'integer'      shift, and enter state 21
	'suppose'      shift, and enter state 22

	Expr           goto state 53
	FunctionApp    goto state 8
	If             goto state 9
	Literal        goto state 10
	UnaryOp        goto state 11

State 28

	Expr -> Expr . BinaryOp Expr                        (rule 7)
	Literal -> '(' Expr . 'and his friend' Expr ')'     (rule 43)

	'and his friend'shift, and enter state 52
	'plus'         shift, and enter state 32
	'minus'        shift, and enter state 33
	'times'        shift, and enter state 34
	'split'        shift, and enter state 35
	'rest'         shift, and enter state 36
	'weaker than'  shift, and enter state 37
	'stronger than'shift, and enter state 38
	'as weak as'   shift, and enter state 39
	'as strong as' shift, and enter state 40
	'same as'      shift, and enter state 41
	'different of' shift, and enter state 42
	'both'         shift, and enter state 43
	'either'       shift, and enter state 44

	BinaryOp       goto state 31

State 29

	FunctionApp -> 'summon' 'identifier' . 'with' FunctionAppArgs    (rule 25)
	FunctionApp -> 'summon' 'identifier' .              (rule 26)

	'with'         shift, and enter state 51
	'and'          reduce using rule 26
	')'            reduce using rule 26
	'and his friend'reduce using rule 26
	'into'         reduce using rule 26
	'?'            reduce using rule 26
	'perhaps'      reduce using rule 26
	'plus'         reduce using rule 26
	'minus'        reduce using rule 26
	'times'        reduce using rule 26
	'split'        reduce using rule 26
	'rest'         reduce using rule 26
	'weaker than'  reduce using rule 26
	'stronger than'reduce using rule 26
	'as weak as'   reduce using rule 26
	'as strong as' reduce using rule 26
	'same as'      reduce using rule 26
	'different of' reduce using rule 26
	'both'         reduce using rule 26
	'either'       reduce using rule 26
	'then we can conclude'reduce using rule 26
	'rather than'  reduce using rule 26
	%eof           reduce using rule 26


State 30

	Expr -> UnaryOp Expr .                              (rule 6)
	Expr -> Expr . BinaryOp Expr                        (rule 7)

	'and'          reduce using rule 6
	')'            reduce using rule 6
	'and his friend'reduce using rule 6
	'into'         reduce using rule 6
	'?'            reduce using rule 6
	'perhaps'      reduce using rule 6
	'plus'         shift, and enter state 32
			(reduce using rule 6)

	'minus'        shift, and enter state 33
			(reduce using rule 6)

	'times'        shift, and enter state 34
			(reduce using rule 6)

	'split'        shift, and enter state 35
			(reduce using rule 6)

	'rest'         shift, and enter state 36
			(reduce using rule 6)

	'weaker than'  shift, and enter state 37
			(reduce using rule 6)

	'stronger than'shift, and enter state 38
			(reduce using rule 6)

	'as weak as'   shift, and enter state 39
			(reduce using rule 6)

	'as strong as' shift, and enter state 40
			(reduce using rule 6)

	'same as'      shift, and enter state 41
			(reduce using rule 6)

	'different of' shift, and enter state 42
			(reduce using rule 6)

	'both'         shift, and enter state 43
			(reduce using rule 6)

	'either'       shift, and enter state 44
			(reduce using rule 6)

	'then we can conclude'reduce using rule 6
	'rather than'  reduce using rule 6
	%eof           reduce using rule 6

	BinaryOp       goto state 31

State 31

	Expr -> Expr BinaryOp . Expr                        (rule 7)

	'summon'       shift, and enter state 12
	'('            shift, and enter state 13
	'put that'     shift, and enter state 14
	'what is'      shift, and enter state 15
	'neg'          shift, and enter state 16
	'not'          shift, and enter state 17
	'yep'          shift, and enter state 18
	'pasyep'       shift, and enter state 19
	'identifier'   shift, and enter state 20
	'integer'      shift, and enter state 21
	'suppose'      shift, and enter state 22

	Expr           goto state 50
	FunctionApp    goto state 8
	If             goto state 9
	Literal        goto state 10
	UnaryOp        goto state 11

State 32

	BinaryOp -> 'plus' .                                (rule 46)

	'summon'       reduce using rule 46
	'('            reduce using rule 46
	'put that'     reduce using rule 46
	'what is'      reduce using rule 46
	'neg'          reduce using rule 46
	'not'          reduce using rule 46
	'yep'          reduce using rule 46
	'pasyep'       reduce using rule 46
	'identifier'   reduce using rule 46
	'integer'      reduce using rule 46
	'suppose'      reduce using rule 46


State 33

	BinaryOp -> 'minus' .                               (rule 47)

	'summon'       reduce using rule 47
	'('            reduce using rule 47
	'put that'     reduce using rule 47
	'what is'      reduce using rule 47
	'neg'          reduce using rule 47
	'not'          reduce using rule 47
	'yep'          reduce using rule 47
	'pasyep'       reduce using rule 47
	'identifier'   reduce using rule 47
	'integer'      reduce using rule 47
	'suppose'      reduce using rule 47


State 34

	BinaryOp -> 'times' .                               (rule 48)

	'summon'       reduce using rule 48
	'('            reduce using rule 48
	'put that'     reduce using rule 48
	'what is'      reduce using rule 48
	'neg'          reduce using rule 48
	'not'          reduce using rule 48
	'yep'          reduce using rule 48
	'pasyep'       reduce using rule 48
	'identifier'   reduce using rule 48
	'integer'      reduce using rule 48
	'suppose'      reduce using rule 48


State 35

	BinaryOp -> 'split' .                               (rule 49)

	'summon'       reduce using rule 49
	'('            reduce using rule 49
	'put that'     reduce using rule 49
	'what is'      reduce using rule 49
	'neg'          reduce using rule 49
	'not'          reduce using rule 49
	'yep'          reduce using rule 49
	'pasyep'       reduce using rule 49
	'identifier'   reduce using rule 49
	'integer'      reduce using rule 49
	'suppose'      reduce using rule 49


State 36

	BinaryOp -> 'rest' .                                (rule 50)

	'summon'       reduce using rule 50
	'('            reduce using rule 50
	'put that'     reduce using rule 50
	'what is'      reduce using rule 50
	'neg'          reduce using rule 50
	'not'          reduce using rule 50
	'yep'          reduce using rule 50
	'pasyep'       reduce using rule 50
	'identifier'   reduce using rule 50
	'integer'      reduce using rule 50
	'suppose'      reduce using rule 50


State 37

	BinaryOp -> 'weaker than' .                         (rule 51)

	'summon'       reduce using rule 51
	'('            reduce using rule 51
	'put that'     reduce using rule 51
	'what is'      reduce using rule 51
	'neg'          reduce using rule 51
	'not'          reduce using rule 51
	'yep'          reduce using rule 51
	'pasyep'       reduce using rule 51
	'identifier'   reduce using rule 51
	'integer'      reduce using rule 51
	'suppose'      reduce using rule 51


State 38

	BinaryOp -> 'stronger than' .                       (rule 52)

	'summon'       reduce using rule 52
	'('            reduce using rule 52
	'put that'     reduce using rule 52
	'what is'      reduce using rule 52
	'neg'          reduce using rule 52
	'not'          reduce using rule 52
	'yep'          reduce using rule 52
	'pasyep'       reduce using rule 52
	'identifier'   reduce using rule 52
	'integer'      reduce using rule 52
	'suppose'      reduce using rule 52


State 39

	BinaryOp -> 'as weak as' .                          (rule 53)

	'summon'       reduce using rule 53
	'('            reduce using rule 53
	'put that'     reduce using rule 53
	'what is'      reduce using rule 53
	'neg'          reduce using rule 53
	'not'          reduce using rule 53
	'yep'          reduce using rule 53
	'pasyep'       reduce using rule 53
	'identifier'   reduce using rule 53
	'integer'      reduce using rule 53
	'suppose'      reduce using rule 53


State 40

	BinaryOp -> 'as strong as' .                        (rule 54)

	'summon'       reduce using rule 54
	'('            reduce using rule 54
	'put that'     reduce using rule 54
	'what is'      reduce using rule 54
	'neg'          reduce using rule 54
	'not'          reduce using rule 54
	'yep'          reduce using rule 54
	'pasyep'       reduce using rule 54
	'identifier'   reduce using rule 54
	'integer'      reduce using rule 54
	'suppose'      reduce using rule 54


State 41
